--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg ">
         <div class="container me-auto bg-white">
-          <a class="navbar-brand" href="#"><img  class="w-75" src="./images/2.jpg"></a>
+      <div class="luminarimg"><a class="navbar-brand" href="#"><img  class="w-75" src="./images/2.jpg"></a></div>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
