--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <p>We at LUMINAR TECHNOLAB offers best software training and placement in emerging technologies like BIG DATA,
             Data Science, Machine Learning,PYTHON, Software Testing.
           </p>
+          <button class="btnviewcourse">VIEW COURSES</button>
         </div>
       </div>
       <div class="carousel-item">
@@ -59,6 +60,7 @@
           </h1>
           <p>We LUMINAR TECHNOLAB offers best software training and placement in emerging technologies like Big Data, Hadoop, Spark,Data Scince, Machine Learning, Deep Learning and AI.
           </p>
+          <button class="btnviewcourse">VIEW COURSES</button>
         </div>
       </div>
     </div>
