--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <div class="carousel-item active">
         <img class="slideimg" src="./images/WhatsApp Image 2023-12-06 at 11.52.14_1e27cd1b.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block  ms-auto">
+        <div class="carousel-caption  ms-auto text-start">
           <h1>Kerala's No.1 IT Finishing School
             <br>100% Placement Assistance<br>
           </h1>
@@ -52,7 +52,7 @@
       </div>
       <div class="carousel-item">
         <img class="slideimg" src="./images/WhatsApp Image 2023-12-06 at 11.52.14_a4de677d.jpg" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block ms-auto">
+        <div class="carousel-caption ms-auto text-start">
           <h1>
             Data Science, ML &amp; AI<br>
             Big Data - Hadoop &amp; Spark <br>
